# mcp-aurai-server

./: .env.example  .gitignore  CHANGELOG_v2.1.md  CHANGELOG_v2.2.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  pytest.ini  归档摘要.txt  改进建议_添加工具引导说明.md
docs/: CLAUDE_CODE_INSTALL.md  MCP安装配置知识集.md  开发文档.md  用户手册.md  论坛更新简报_v2.1.1_工具引导增强.md
scripts/: backup_project.bat  backup_project.py  build_exe.bat  run_backup.bat
src/mcp_aurai/: __init__.py  config.py  llm.py  prompts.py  server.py  utils.py
tests/: test_config_and_context.py  test_history_persistence.py
tools/: control_center.py
